# windy-call

./: CLAUDE.md  DEPLOY.md  README.md  SUBSTRATE.md
.github/workflows/: ci.yml  deploy.yml
deploy-prod/: docker-compose.yml
service/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
service/app/: cell_client.py  config.py  main.py  twilio_client.py  types.py
service/app/auth/: dependencies.py
service/app/eii/: cost_cap.py
service/app/routes/: version.py
service/app/sms/: router.py
service/app/twilio_inbound/: router.py  signature.py  voicemail.py
service/app/voice/: router.py
service/tests/: conftest.py  test_cell_client.py  test_cost_cap.py  test_health.py  test_sms.py  test_twilio_inbound_voice.py  test_types.py  test_version.py  test_voice.py  test_voicemail.py
spec/: agent-call-protocol.md
